updated html and todo

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
     <header>
       <div class="logoHolder">
         <i class="fa-brands fa-drupal"></i>
-        <p>YaraPlus</p>
+        <p>ObjectPlus</p>
       </div>
       <div class="actions">
         <select name="farms" id="farm-select">
-          <option value="">Please select a farm</option>
-          <option value="Rasa Creek">Farm <br>Rasa Creek</option>
-          <option value="Pobiti Kamani">Farm <br>Pobiti Kamani</option>
-          <option value="Kichevo">Farm <br> Kichevo</option>
-          <option value="Kranevo">Farm <br> Kranevo</option>
+          <option value="Rasa Creek"><i class="fa-solid fa-tractor"></i>Farm <br/> Rasa Creek</option>
+          <option value="Pobiti Kamani"><i class="fa-solid fa-tractor"></i>Farm Pobiti Kamani</option>
+          <option value="Kichevo"><i class="fa-solid fa-tractor"></i>Farm  Kichevo</option>
+          <option value="Kranevo"><i class="fa-solid fa-tractor"></i>Farm  Kranevo</option>
         </select>
         <nav>
           <ul id="nav-icons">
