styled aside navigation bar

--- a/index.html
+++ b/index.html
@@ -48,26 +48,12 @@
       </div>
     </header>
     <aside>
-      <div class="radio-buttons-grp">
-        <label
-          >Home
-          <input type="radio" id="nav1" name="nav" value="Home" />
-        </label>
-        <label
-          >Events
-          <input type="radio" id="nav2" name="nav" value="Events" />
-        </label>
-
-        <label
-          >News
-          <input type="radio" id="nav3" name="nav" value="News" />
-        </label>
-
-        <label
-          >Podcasts
-          <input type="radio" id="nav4" name="nav" value="Podcasts" />
-        </label>
-      </div>
+      <ul class="side-navigation">
+        <li><a href="#" class="aside-button" ><i class="fa-solid fa-house-user"></i>Home</a></li>
+        <li><a href="#" class="aside-button" ><i class="fa-solid fa-calendar-week"></i> Events</a></li>
+        <li><a href="#" class="aside-button" ><i class="fa-solid fa-newspaper"></i> News</a></li>
+        <li><a href="#" class="aside-button" ><i class="fa-solid fa-microphone"></i> Podcasts</a></li>
+      </ul>
       <p>Restart the tour</p>
     </aside>
     <main>
