styled news cards

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           <section id="podcasts">
             <div class="podcasts-top-part">
             <h2>Podcasts</h2>
-            <a href="#">See All Podcasts</a>
+            <a href="#" class="hollow-action-button">See All Podcasts</a>
             </div>
             <div class="podcasts-holder">
             <article class="podcast-card">
@@ -259,41 +259,51 @@
             </div>
           </section>
         </section>
-        <section class="news-section">
+        <section id="news-section">
+          <div class="news-headings">
           <h2>News</h2>
-          <a href="#">See All News</a>
+          <a href="#" class="hollow-action-button">See All News</a>
+          </div>
           <div class="news-card-holder">
             <article class="news-card">
-              <img />
+              <div class="news-card-upper-part">
+              <img src="assets/potatoes-photo.jpg"/>
               <p class="greyed-out">Potatoes</p>
-              <h2>News Heading</h2>
-              <h4>Short description</h4>
-              <p>Date</p>
-              <a href="#">Read More</a>
+              <h2>Brand new research for potato fields</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, ut!</p>
+              <p class="date">23 Jun 2023</p>
+              </div>
+              <a href="#" class="action-button">Read More</a>
             </article>
             <article class="news-card">
-              <img />
-              <p class="greyed-out">Potatoes</p>
-              <h2>News Heading</h2>
-              <h4>Short description</h4>
-              <p>Date</p>
-              <a href="#">Read More</a>
+              <div class="news-card-upper-part">
+              <img src="assets/weather-photo.jpg"/>
+              <p class="greyed-out">Weather</p>
+              <h2>No rain foreseen for the next 10 days</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti?</p>
+              <p class="date">21 Jun 2023</p>
+              </div>
+              <a href="#" class="action-button">Read More</a>
             </article>
             <article class="news-card">
-              <img />
-              <p class="greyed-out">Potatoes</p>
-              <h2>News Heading</h2>
-              <h4>Short description</h4>
-              <p>Date</p>
-              <a href="#">Read More</a>
+              <div class="news-card-upper-part">
+              <img src="assets/wheat-photo.jpg"/>
+              <p class="greyed-out">Wheat</p>
+              <h2>This year's harvest foreseen to be great</h2>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolore, consequuntur ea.</p>
+              <p class="date">19 Jun 2023</p>
+              </div>
+              <a href="#" class="action-button">Read More</a>
             </article>
             <article class="news-card">
-              <img />
-              <p class="greyed-out">Potatoes</p>
-              <h2>News Heading</h2>
-              <h4>Short description</h4>
-              <p>Date</p>
-              <a href="#">Read More</a>
+              <div class="news-card-upper-part">
+              <img src="assets/cows-photo.jpg"/>
+              <p class="greyed-out">Dairy</p>
+              <h2>Cows are happier than ever says expert</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+              <p class="date">14 Jun 2023</p>
+              </div>
+              <a href="#" class="action-button">Read More</a>
             </article>
           </div>
         </section>
