--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <aside>
         <ul class="side-navigation">
           <li>
-            <a href="#" class="aside-button"
+            <a href="#" class="aside-button active"
               ><i class="fa-solid fa-house-user"></i>Home</a
             >
           </li>
@@ -87,7 +87,7 @@
             >
           </li>
         </ul>
-        <p>Restart the tour</p>
+        <p class="restart"> <i class="fa-solid fa-reply"></i>Restart the tour</p>
       </aside>
       <main>
         <section id="main-content">
@@ -287,16 +287,18 @@
               <section class="page-section__card-holder podcasts">
                 <article class="card card--podcast">
                   <div class="podcast-card-top">
-                  <img src="assets/podcast-photo.jpg" class="card__img" />
-                  <div class="podcast-card-text">
-                  <p class="greyed-out">Episode #17</p>
-                  <h2>Compliance and labour: take care of our neighbours.</h2>
-                  <p class="greyed-out">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Aliquam, alias?
-                  </p>
-                  <p class="date">26 Jun 2023</p>
-                  </div>
+                    <img src="assets/podcast-photo.jpg" class="card__img" />
+                    <div class="podcast-card-text">
+                      <p class="greyed-out">Episode #17</p>
+                      <h2>
+                        Compliance and labour: take care of our neighbours.
+                      </h2>
+                      <p class="greyed-out">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Aliquam, alias?
+                      </p>
+                      <p class="date">26 Jun 2023</p>
+                    </div>
                   </div>
                   <div class="card--action">
                     <a href="#" class="action-button">Listen</a>
@@ -304,81 +306,109 @@
                 </article>
                 <article class="card card--podcast">
                   <div class="podcast-card-top">
-                  <div class="podcast-card-text">
-                  <p class="greyed-out">Episode #17</p>
-                  <h2>Compliance and labour: take care of our neighbours.</h2>
-                  <p class="greyed-out">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Aliquam, alias?
-                  </p>
-                  <p class="date">26 Jun 2023</p>
-                  </div>
+                    <div class="podcast-card-text">
+                      <p class="greyed-out">Episode #17</p>
+                      <h2>
+                        Compliance and labour: take care of our neighbours.
+                      </h2>
+                      <p class="greyed-out">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Aliquam, alias?
+                      </p>
+                      <p class="date">26 Jun 2023</p>
+                    </div>
                   </div>
                   <div class="card--action">
                     <a href="#" class="action-button">Listen</a>
                   </div>
                 </article>
-                
               </section>
             </div>
           </section>
-          <!-- <section id="news-section" class="page-section">
-            <div class="page-section__headings">
+          <section class="page-section">
+            <div class="page-section__headings full">
               <h2>News</h2>
               <a href="#" class="hollow-action-button">See All News</a>
             </div>
-            <div class="page-section__card-holder">
+            <div class="page-section__card-holder news">
               <article class="card card--news">
                 <div class="news-card-upper-part">
-                  <img src="assets/potatoes-photo.jpg" class="card__img" />
-                  <p class="greyed-out">Potatoes</p>
-                  <h2>Brand new research for potato fields</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Adipisci, ut!
-                  </p>
-                  <p class="date">23 Jun 2023</p>
+                  <div class="event-card-upper-part">
+                    <img src="assets/potatoes-photo.jpg" class="card__img" />
+                    <div class="event-card-text-holder">
+                      <p class="greyed-out">Potatoes</p>
+                      <h2>Brand new research for potato fields</h2>
+                      <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Adipisci, ut!
+                      </p>
+                      <p class="date">23 Jun 2023</p>
+                    </div>
+                  </div>
                 </div>
-                <a href="#" class="action-button">Read More</a>
+                <div class="card--action">
+                  <a href="#" class="action-button">Read More</a>
+                </div>
               </article>
+
               <article class="card card--news">
                 <div class="news-card-upper-part">
-                  <img src="assets/weather-photo.jpg" class="card__img" />
-                  <p class="greyed-out">Weather</p>
-                  <h2>No rain foreseen for the next 10 days</h2>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Deleniti?
-                  </p>
-                  <p class="date">21 Jun 2023</p>
+                  <div class="event-card-upper-part">
+                    <img src="assets/weather-photo.jpg" class="card__img" />
+                    <div class="event-card-text-holder">
+                      <p class="greyed-out">Weather</p>
+                      <h2>No rain foreseen for the next 10 days</h2>
+                      <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing
+                        elit. Deleniti?
+                      </p>
+                      <p class="date">21 Jun 2023</p>
+                    </div>
+                  </div>
                 </div>
-                <a href="#" class="action-button">Read More</a>
+                <div class="card--action">
+                  <a href="#" class="action-button">Read More</a>
+                </div>
               </article>
+
               <article class="card card--news">
                 <div class="news-card-upper-part">
-                  <img src="assets/wheat-photo.jpg" class="card__img" />
-                  <p class="greyed-out">Wheat</p>
-                  <h2>This year's harvest foreseen to be great</h2>
-                  <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Dolore, consequuntur ea.
-                  </p>
-                  <p class="date">19 Jun 2023</p>
+                  <div class="event-card-upper-part">
+                    <img src="assets/wheat-photo.jpg" class="card__img" />
+                    <div class="event-card-text-holder">
+                      <p class="greyed-out">Wheat</p>
+                      <h2>This year's harvest foreseen to be great</h2>
+                      <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Dolore, consequuntur ea.
+                      </p>
+                      <p class="date">19 Jun 2023</p>
+                    </div>
+                  </div>
                 </div>
-                <a href="#" class="action-button">Read More</a>
+                <div class="card--action">
+                  <a href="#" class="action-button">Read More</a>
+                </div>
               </article>
+
               <article class="card card--news">
                 <div class="news-card-upper-part">
-                  <img src="assets/cows-photo.jpg" class="card__img" />
-                  <p class="greyed-out">Dairy</p>
-                  <h2>Cows are happier than ever says expert</h2>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                  <p class="date">14 Jun 2023</p>
+                  <div class="event-card-upper-part">
+                    <img src="assets/cows-photo.jpg" class="card__img" />
+                    <div class="event-card-text-holder">
+                      <p class="greyed-out">Dairy</p>
+                      <h2>Cows are happier than ever says expert</h2>
+                      <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                      <p class="date">14 Jun 2023</p>
+                    </div>
+                  </div>
                 </div>
-                <a href="#" class="action-button">Read More</a>
+                <div class="card--action">
+                  <a href="#" class="action-button">Read More</a>
+                </div>
               </article>
             </div>
-          </section> -->
+          </section>
         </section>
       </main>
     </div>
