--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
             >
           </li>
         </ul>
-        <p class="restart"> <i class="fa-solid fa-reply"></i>Restart the tour</p>
+        <div class="bottomPart"> <p class="restart"> <i class="fa-solid fa-reply"></i>Restart the tour</p></div>
+       
       </aside>
       <main>
         <section id="main-content">
