fixed podcasts responsiveness

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </aside>
       <main>
         <section id="main-content">
-          <section id="hero-section" class="page-section page-section--hero">
+          <section  class="page-section page-section--hero">
             <div class="heading-holder">
               <h1>Welcome, Sebastian!</h1>
               <p>
