card css updates

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             </div>
             <section class="page-section__card-holder">
               <article class="card card--wide">
-                <div class="card--wide__upper">
+               <div class="card--wide__upper">
                   <img src="assets/grassn.jpg" class="card__img" />
                   <div class="card--wide__info">
                     <div class="wide-card-text-holder-headings">
@@ -207,6 +207,7 @@
                       <h2>GrassN</h2>
                       <p class="recommended-option">Recommended</p>
                     </div>
+                    <div class="wide-card-text-holder-content">
                     <p>Optimal grassland management</p>
                     <p class="greyed-out">
                       Plan compliant fertilization and optimal harvest time for
@@ -217,6 +218,7 @@
                       <li>Mineral fertilization</li>
                       <li>Yield</li>
                     </ul>
+                    </div>
                   </div>
                 </div>
                 <div class="card--action">
@@ -240,18 +242,13 @@
               </article>
             </section>
           </section>
-          <section class="page-section">
-            <div class="page-section__headings split">
+          <section class="page-section split">
+            <div class="page-section--events">
+              <div class="events-part">
               <div class="page-section__headings__half">
                 <h2>Events</h2>
                 <a href="#" class="hollow-action-button">See All Events</a>
               </div>
-              <div class="page-section__headings__half">
-                <h2>Podcasts</h2>
-                <a href="#" class="hollow-action-button">See All Podcasts</a>
-              </div>
-            </div>
-            <div class="page-section--events">
               <section class="page-section__card-holder events">
                 <article class="card card--event">
                   <div class="event-card-upper-part">
@@ -285,7 +282,13 @@
                   </div>
                 </article>
               </section>
+              </div>
+              
               <section class="page-section__card-holder podcasts">
+                <div class="page-section__headings__half">
+                <h2>Podcasts</h2>
+                <a href="#" class="hollow-action-button">See All Podcasts</a>
+              </div>
                 <article class="card card--podcast">
                   <div class="podcast-card-top">
                     <img src="assets/podcast-photo.jpg" class="card__img" />
